<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:layout_weight="6"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:srcCompat="@drawable/mascot_icon"
            android:layout_gravity="center" />

        <TextView
            style="@style/df_h3"
            android:layout_width="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <LinearLayout
                android:id="@+id/sendOtpLayout"
                style="@style/df_row_vertical"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutUname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeActionId="@+id/edittext_action_login"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        tools:ignore="InvalidImeActionId" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Add your other UI components here -->
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_marginTop="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    style="@style/df4_btn_danger"
                    android:layout_gravity="center_vertical"
                    android:text="Login"/>

                <ProgressBar
                    android:id="@+id/progressSendingOtp"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone"
                    android:layout_centerInParent="true"/>

                <TextView
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginTop="24dp"
                    style="@style/df_h6"
                    android:text="@string/forgot_password"/>

                <TextView
                    android:id="@+id/btnSignUp"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginTop="24dp"
                    style="@style/df_h6"
                    android:text="@string/register"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>